--- a/PushDataAfterSecurityControl/src/main/resources/application.properties
+++ b/PushDataAfterSecurityControl/src/main/resources/application.properties
@@ -1,5 +1,32 @@
+#1
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+#2
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/roles_db
+#3
+spring.datasource.url=jdbc:postgresql://localhost:5432/product_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+#4
+spring.jpa.open-in-view=false
+#5
+spring.jpa.hibernate.ddl-auto=create-drop
+#6
+spring.jpa.generate-ddl=false
+#7
+spring.jpa.database=postgresql
+#8
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#9
+spring.jpa.show-sql=true
+#10
+spring.jpa.properties.hibernate.format_sql=true
+#1 - ???????? ??? ????????? ??????(HikariDataSource - ??????????????????????);
+#2 - ?????? ??????? ??? ??????????? ? ??;
+#3 - ??????????? ????????? ??? ?????????? ? ??;
+#4 - ?????????? ???????? ?????? Hibernate(false = ?????????? ??????????????? ??????????, ?????? ??????????? ?? ????????????? ? ??????????? ???? ????????? ???)???c?: ???????? ????? ??????,????????? ??????????????????
+#5 - ?????????? ?????????? ???????? ?? ? ?????? ??????? ?????????? (create, create-drop,validate,update)
+#6 - ?????????? ????????? DDL ???????? ? ?????? ????????? ????????????? ????????? ? ???????? ???????(true -  ??? ???????)
+#7 - ?????? ??? ?? ??? ????????? ????????? JPA
+#8 - ???? ???????? ??? ?? ????? Hibernate ????????? ??????????? ???????
+#9 - ????? ???? ???????? ? ????
+#10 - ????????????? ???????? ??? ?????? ??????????
