--- a/WMSystemDB/src/main/resources/application.properties
+++ b/WMSystemDB/src/main/resources/application.properties
@@ -1,11 +1,29 @@
+#1
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+#2
 spring.datasource.driver-class-name=org.postgresql.Driver
+#3
 spring.datasource.url=jdbc:postgresql://localhost:5432/product_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+#4
 spring.jpa.open-in-view=false
+#5
 spring.jpa.hibernate.ddl-auto=create-drop
+#6
 spring.jpa.database=postgresql
+#7
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#8
 spring.jpa.show-sql=true
+#9
 spring.jpa.properties.hibernate.format_sql=true
+#1 - ???????? ??? ????????? ??????(HikariDataSource - ??????????????????????);
+#2 - ?????? ??????? ??? ??????????? ? ??;
+#3 - ??????????? ????????? ??? ?????????? ? ??;
+#4 - ?????????? ???????? ?????? Hibernate(false = ?????????? ??????????????? ??????????, ?????? ??????????? ?? ????????????? ? ??????????? ???? ????????? ???)???c?: ???????? ????? ??????,????????? ??????????????????
+#5 - ?????????? ?????????? ?? ? ?????? ??????? ??????????(create, create-drop,validate,update)
+#6 - ?????? ??? ?? ??? ????????? ????????? JPA
+#7 - ???? ???????? ??? ?? ????? Hibernate ????????? ??????????? ???????
+#8 - ????? ???? ???????? ? ????
+#9 - ????????????? ???????? ??? ?????? ??????????
