--- a/PushDataAfterSecurityControl/pom.xml
+++ b/PushDataAfterSecurityControl/pom.xml
@@ -50,6 +50,12 @@
             <artifactId>postgresql</artifactId>
             <version>42.6.0</version>
         </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.0.0.GA</version>
+        </dependency>
+
     </dependencies>
 
     <build>
