--- a/PushDataAfterSecurityControl/src/main/resources/application.properties
+++ b/PushDataAfterSecurityControl/src/main/resources/application.properties
@@ -20,13 +20,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 #10
 spring.jpa.properties.hibernate.format_sql=true
-#1 - ???????? ??? ????????? ??????(HikariDataSource - ??????????????????????);
-#2 - ?????? ??????? ??? ??????????? ? ??;
-#3 - ??????????? ????????? ??? ?????????? ? ??;
-#4 - ?????????? ???????? ?????? Hibernate(false = ?????????? ??????????????? ??????????, ?????? ??????????? ?? ????????????? ? ??????????? ???? ????????? ???)???c?: ???????? ????? ??????,????????? ??????????????????
-#5 - ?????????? ?????????? ???????? ?? ? ?????? ??????? ?????????? (create, create-drop,validate,update)
-#6 - ?????????? ????????? DDL ???????? ? ?????? ????????? ????????????? ????????? ? ???????? ???????(true -  ??? ???????)
-#7 - ?????? ??? ?? ??? ????????? ????????? JPA
-#8 - ???? ???????? ??? ?? ????? Hibernate ????????? ??????????? ???????
-#9 - ????? ???? ???????? ? ????
-#10 - ????????????? ???????? ??? ?????? ??????????
+#11
+admin.login=admin
+admin.password=admin
+admin.roles= ROLE_ADMIN, ROLE_USER
