--- a/PushDataAfterSecurityControl/src/main/resources/application.properties
+++ b/PushDataAfterSecurityControl/src/main/resources/application.properties
@@ -21,6 +21,8 @@ spring.jpa.show-sql=true
 #10
 spring.jpa.properties.hibernate.format_sql=true
 #11
-admin.login=admin
+admin.username=admin
 admin.password=admin
 admin.roles= ROLE_ADMIN, ROLE_USER
+#12
+server.port=8010
