--- a/MainArchitecture/src/main/resources/application.properties
+++ b/MainArchitecture/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=MainArchitecture
+spring.mvc.view.prefix= /WEB-INF/jsp/
+spring.mvc.view.suffix= .jsp
+server.port=8080
+server.servlet.context-path=/MainArchitecture
