--- a/WMSystemDB/src/main/resources/application.properties
+++ b/WMSystemDB/src/main/resources/application.properties
@@ -13,17 +13,10 @@ spring.jpa.hibernate.ddl-auto=create-drop
 #6
 spring.jpa.database=postgresql
 #7
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect .PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #8
 spring.jpa.show-sql=true
 #9
 spring.jpa.properties.hibernate.format_sql=true
-#1 - ???????? ??? ????????? ??????(HikariDataSource - ??????????????????????);
-#2 - ?????? ??????? ??? ??????????? ? ??;
-#3 - ??????????? ????????? ??? ?????????? ? ??;
-#4 - ?????????? ???????? ?????? Hibernate(false = ?????????? ??????????????? ??????????, ?????? ??????????? ?? ????????????? ? ??????????? ???? ????????? ???)???c?: ???????? ????? ??????,????????? ??????????????????
-#5 - ?????????? ?????????? ?? ? ?????? ??????? ??????????(create, create-drop,validate,update)
-#6 - ?????? ??? ?? ??? ????????? ????????? JPA
-#7 - ???? ???????? ??? ?? ????? Hibernate ????????? ??????????? ???????
-#8 - ????? ???? ???????? ? ????
-#9 - ????????????? ???????? ??? ?????? ??????????
+#server.port=1000
