kafka update Consumer

--- a/MessageBrockerFromKafka/src/main/resources/application.properties
+++ b/MessageBrockerFromKafka/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=MessageBrockerFromKafka
+spring.kafka.producer.bootstrap-servers="127.0.0.1:9092"
+spring.kafka.producer.client-id="demo-producer"
