--- a/WMSystemDB/src/main/resources/application.properties
+++ b/WMSystemDB/src/main/resources/application.properties
@@ -19,4 +19,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 #9
 spring.jpa.properties.hibernate.format_sql=true
-#server.port=1000
+#10
+spring.kafka.producer.bootstrap-servers="127.0.0.1:9092"
+spring.kafka.producer.client-id="demo-producer"
