--- a/MessageBrockerFromKafka/pom.xml
+++ b/MessageBrockerFromKafka/pom.xml
@@ -62,6 +62,10 @@
             <groupId>jakarta.persistence</groupId>
             <artifactId>jakarta.persistence-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
 
     </dependencies>
 
